:+1: Add API CRUD user, post.
