# routes/users/get.js
@@ -1,15 +1,27 @@
 /**
  * @type {import('express').RequestHandler}
  */
+import { prisma } from '@database'
+
 export default async (req, res) => {
-  res.send({
-    id: 0,
-    username: 'string',
-    email: 'user@example.com',
-    phoneNumber: 'string',
-    dob: '2019-08-24T14:15:22Z',
-    gender: 'string',
-    createdAt: '2019-08-24T14:15:22Z',
-    updatedAt: '2019-08-24T14:15:22Z',
+  const users = await prisma.user.findMany({
+    where: {
+      deleted: false,
+    },
+    select: {
+      id: true,
+      username: true,
+      email: true,
+      phoneNumber: true,
+      dateOfBirth: true,
+      gender: true,
+    },
   })
+
+  if (users.length > 0) {
+    return res
+      .status(200)
+      .send({ message: 'Get all user success', data: users })
+  }
+  res.status(200).send({ message: 'User is empty' })
 }
